Added standard SQL chars

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,6 @@
     <head></head>
     <body>
         <h1>CIS 6614 SQL Injection Finder</h1>       
+        <p><%= sql %></p>
     </body>
 </html>
