Setup database connections

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,9 @@
     <body>
         <h1>CIS 6614 SQL Injection Finder</h1>       
         <p><%= sql %></p>
+        <form method="POST" action=".">
+            <input name="test" type="text" />
+            <input type="submit" value="Submit" />
+        </form>
     </body>
 </html>
