--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <body>
         <h1>CIS 6614 SQL Injection Finder</h1>       
         <p><%= sql %></p>
-        <form method="POST" action=".">
+        <form method="POST" action="/attackOne">
             <input name="test" type="text" />
             <input type="submit" value="Submit" />
         </form>
