--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
         <h1>CIS 6614 - SQL Injection Analyzer</h1>
         <ul>
             <li><a href="/attack-vector-tester">Attack Vector Tester</a></li>
+            <li><a href="/scanner">Scanner</a></li>
+            <li><a href="/test-generator">Test Generator</a></li>
         </ul>
     </body>
 </html>
