--- a/unsecure-app/views/index.ejs
+++ b/unsecure-app/views/index.ejs
@@ -13,6 +13,17 @@
                 <li>
                     <label>Email: <input type="text" name="email" /></label>,
                 </li>
+                <li>
+                    <label>Gender: <input type="radio" name="gender" value="male" />  <input type="radio" name="gender" value="female" />
+                </li>
+                <li>
+                    <label>Favorite colors:</label>
+                    <ul>
+                        <li><label><input type="checkbox" name="colors[]" value="red">Red</label></li>
+                        <li><label><input type="checkbox" name="colors[]" value="blue">Blue</label></li>
+                        <li><label><input type="checkbox" name="colors[]" value="yellow">Yellow</label></li>
+                    </ul>
+                </li>
                 <li><input type="submit" value="Submit" /></li>
             </ul>
         </form>
