Cleaned up with layouts and bootstrap

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,1 @@
-<html>
-    <head>
-        <title>CIS 6614 - SQL Injection Analyzer</title>
-    </head>
-    <body>
-        <h1>CIS 6614 - SQL Injection Analyzer</h1>
-        <ul>
-            <li><a href="/attack-vector-tester">Attack Vector Tester</a></li>
-            <li><a href="/scanner">Scanner</a></li>
-            <li><a href="/test-generator">Test Generator</a></li>
-        </ul>
-    </body>
-</html>
+Welcome to the tool
