Cleaned up scanner page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,15 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
  
+  <style>
+    .card-body{ flex: 0;} 
+    .unsecure {
+      color: red;
+    }
+    .secure {
+      color: green;
+    }
+  </style>
 </head>
 
 <body>
@@ -24,7 +33,7 @@
             </a>
           </li>
           <li class="nav-item"><a class="nav-link" href="/attack-vector-tester">Attack Vector Tester</a></li>
-          <li class="nav-item"><a class="nav-link" href="/scanner">Scanner</a></li>
+          <li class="nav-item"><a class="nav-link" href="/scanner">Run Scanner</a></li>
           <li class="nav-item"><a class="nav-link" href="/test-generator">Test Generator</a></li>
       </ul>
       </div>
