Updated config to allow users to add their own fuzz tests

--- a/views/scanner/index.ejs
+++ b/views/scanner/index.ejs
@@ -1,5 +1,6 @@
-<div class="container"><div class="row">
-    <div class="col"><a href="/scanner/run-scan">Run</a></div>
+<div class="container">
+<div class="row">
+    <div class="col-1"><h3><a href="/scanner/run-scan">Run</a></h3></div>
 </div>
 <% try{
 %>
