--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
  
   <style>
+    .card {margin-bottom: 10px;}
     .card-body{ flex: 0;} 
     .unsecure {
       color: red;
