--- a/views/scanner/index.ejs
+++ b/views/scanner/index.ejs
@@ -3,6 +3,7 @@
     <div class="text-left col"><h3><a href="/scanner/run-scan">Run</a></h3></div>
 </div>
 <% try{
+    if(successes.length + failures.length != 0){
 %>
 <div class="row">
     <div class="col">
@@ -32,5 +33,21 @@
         </div>
     </div>
 </div>
-<% } catch(e){} %>
+<% }
+else {
+
+}
+%>
+<div class="row">
+    <div class="col">
+        <div class="card">
+
+        <div class="card-body">
+            <h5 class="card-title">Please run scanner to view results</h5>
+        </div>
+        </div>
+    </div>
+</div> 
+<%
+ } catch(e){} %>
 </div>
