--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,11 @@
     .secure {
       color: green;
     }
+    .navbar-expand-lg {
+      position: inherit !important;
+    }
+
+    .container { padding-top: 10px !important}
   </style>
 </head>
 
@@ -23,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">CIS 6614 - MEV Injection Guard</a>
+      <a class="navbar-brand" href="#">CIS 6614 - MEN Injection Guard</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
