Only show no results when loading

--- a/views/scanner/index.ejs
+++ b/views/scanner/index.ejs
@@ -35,8 +35,6 @@
 </div>
 <% }
 else {
-
-}
 %>
 <div class="row">
     <div class="col">
@@ -49,5 +47,6 @@ else {
     </div>
 </div> 
 <%
+} // end else
  } catch(e){} %>
 </div>
