Test Generator is adding tests

--- a/views/test-generator/index.ejs
+++ b/views/test-generator/index.ejs
@@ -1,7 +1,14 @@
 <div class="container">
     <div class="row">
         <div class="text-left col">
-            <p>Below are Jasmine tests that you can use in your MEV applicaiton to prevent future attacks where this tool found vulernbilites.  For more infomation on Jasmine Behavior-Driven JavaScript, please visit their website here: <a href="https://jasmine.github.io/">https://jasmine.github.io/</a></p>
+            <p>Below are Jasmine tests that you can use in your MEV applicaiton to prevent future attacks where this tool found vulnerabilities.  For more infomation on Jasmine Behavior-Driven JavaScript, please visit their website here: <a href="https://jasmine.github.io/">https://jasmine.github.io/</a></p>
         </div>
     </div>
+    <%for(let i=0; i<jasmineTests.length; i++){ %> 
+    <div class="row">
+        <div class="col text-left">
+            <code><pre><%-jasmineTests[i]%></pre></code>
+        </div>
+    </div>
+    <% } %>
 </div>
