Display target app configuration settings to user

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,17 @@
     }
 
     .container { padding-top: 10px !important}
+
+    .config-options-input li input {
+      font-family: auto;
+      font-size:auto;
+      line-height: auto;
+    }
+
+    .config-options-input {
+      list-style-type: none;
+      text-align: left;
+    }
   </style>
 </head>
 
