--- a/views/scanner/index.ejs
+++ b/views/scanner/index.ejs
@@ -1,12 +1,10 @@
 <div class="container">
-<div class="row">
-    <div class="text-left col"><h3><a href="/scanner/run-scan">Run</a></h3></div>
-</div>
+
 <% try{
     if(successes.length + failures.length != 0){
 %>
 <div class="row">
-    <div class="col">
+    <div class="col-8">
         <div class="card">
 
         <div class="card-body">
@@ -32,12 +30,11 @@
         </ul>
         </div>
     </div>
-</div>
+
 <% }
 else {
 %>
-<div class="row">
-    <div class="col">
+    <div class="col-8">
         <div class="card">
 
         <div class="card-body">
@@ -45,8 +42,20 @@ else {
         </div>
         </div>
     </div>
-</div> 
+
 <%
 } // end else
  } catch(e){} %>
+ <div class="col-4">
+        
+        <h4>Target Application Configuration</h2>
+        <form method="POST" action="/scanner/run-scan">
+            <ul class="config-options-input">
+                <li><label>App URL: <input type="text" value="<%=defaultConfigOptions.url%>" name="url" /></label></li>          
+                <li><label>Success Content: </label><input type="text" value="<%=defaultConfigOptions.successContent%>" name="successContent" /></li>           
+                <li><input type="submit" value="Run" /></li>
+            </ul>
+        </form> 
+    </div>
+</div> 
 </div>
